# website-blog

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.js  biome.json  blog-page-debug.html  docker-compose.yaml  docker-entrypoint.sh  next.config.mjs  package-lock.json  package.json  radio-player-handoff.json  readme.md  tsconfig.json
.agents/: TOKENS.md  setup-agents.sh
.agents/audit/: 002a-verify-project-setup-audit.md  005b-AUDIT-NOTE-archived-20260204-174216.txt  AGENTS.md  session-2026-02-04-171437.md  session-2026-02-04-174230.md  session-2026-02-04.md
.agents/modes/: AUDITOR.md  CODER.md  MANAGER.md  QA.md  REVIEWER.md  TASKMASTER.md  TESTER.md
.agents/notes/: architectural-decision-markdown-sanitization.md  blog-ui-patterns.md  taskmaster-verification-2026-01-18-0221.md  taskmaster-verification-20260204-163848.md  technical-decisions-summary.md
.agents/tasks/: AGENTS.md
.agents/temp/: species-card-markdown-loader-notes.md  species-card-ui-idea.md
.github/agents/: auditor.md  coder.md  mode-picker.md  qa.md  taskmaster.md  worker.md
.github/workflows/: build.yml  lint.yml  test.yml
app/: layout.tsx  page.tsx
app/blog/: page.tsx  (+1 more)
blog/: README.md  TESTING.md
components/: DynamicBackdropProvider.tsx  FirstLoadOverlay.tsx  GamePicker.tsx  HomePageClient.tsx  NavBar.tsx  PovPicker.tsx  TagFilterBar.tsx  ThemeRegistry.tsx
lib/: theme.ts
lore/: README.md
scripts/: generate-lore-post-index.ts  import-real-moments-species-cards.sh  import-real-moments-species-cards.ts  start-tts.sh
tts/: pyproject.toml  server.py
tts/tests/: test_server.py
(+297 files in other folders)
