[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.135.3",
    "kokoro>=0.9.4",
    "soundfile>=0.13.1",
    "uvicorn>=0.44.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
